fixed about text centering on ie and container--darken positioning

--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -7,15 +7,16 @@
     }
     
     &__text{
-        position:relative;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center; //for ie 10/11 in which centering <p> based on margin 0 auto didnt work; margin 0 auto still here for browsers without flex
+        position:relative;
         width: 100%;
         height: 100%; 
         box-sizing: border-box;
-        overflow: hidden;
         padding: 0 1.5em;
+        overflow: hidden;
         box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
         background: {
             color: rgb(46, 67,114);
