--- a/src/sass/generic.scss
+++ b/src/sass/generic.scss
@@ -97,6 +97,7 @@ img{
     
     &--darken::before {
         position: absolute;
+        top: 0;
         z-index: 1;
         width: 100%;
         height: 100%;
